--- a/style.css
+++ b/style.css
@@ -6,12 +6,16 @@ body{
 
 header{
     text-align: right;
-    padding: 10px
+    padding-right: 10px;
+    padding-left: 0;
+    padding-top:10px;
 
 }
 nav ul {
     list-style: none;
-    
+    font-size:20px;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding-right:80px;
 }
 
 nav ul li {
@@ -20,13 +24,43 @@ nav ul li {
     padding:40px;
 }
 
-.hero{
+.horizLine {
+    margin-top:30px;
+    background-color:white;
+    height: 6px;
+    margin-right: 150px;
+    margin-left:0;
+
+    
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    height:100vh;
+    align-items: flex-start;
+    top:90px;
+    position: relative;
+    padding-top: 20px;
+}
+
+.verticalLine {
+    border-left: 12px solid white;
+    margin-right: 20px;
+    margin-left: 100px;
+    padding: 0;
+
+}
+
+.hero {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    align-items: flex-start;
     height: 100vh;
     padding: 20px;
     font-size: 40px;
+    margin: 0
 }
 
 .developer {
@@ -36,4 +70,9 @@ nav ul li {
 
 .designer {
     font-family:cursive;
+}
+
+.bio {
+    padding: 20px;
+    margin-bottom: 20px;
 }
