--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #10142B;
     color: white;
+    font-family: Rubik;
 }
 
 header{
@@ -16,7 +16,7 @@ nav ul {
     font-size:20px;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-right:80px;
-    font-weight: bold;
+    
 }
 
 nav ul li {
@@ -51,19 +51,23 @@ nav ul li {
 
 }
 
+
 .hero {
+    font-family: "Port Lligat Sans";
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    height: 80vh;
+    height: 70vh;
     padding-left:20px;
     font-size: 40px;
     margin-top: 0px;
+    margin-right:700px;
 }
 
 .developer {
-    font-family:serif;
+    font-family:"Press Start 2P";
+    font-size:40px;
 
 }
 
@@ -71,26 +75,36 @@ nav ul li {
     font-family:cursive;
 }
 
+.bio h2{
+    font-size: 35px;
+}
+
 .bio {
     margin:20px;
     margin-right: 600px;
+    line-height:150%;
+    margin-bottom: 200px;
 }
 
 .projects{
-    padding-left: 20px;
+    margin-left: 20px;
     background-color: #10142B;
     text-align:left;
     color: black;
     margin-right: 200px;
-    margin-bottom: 100px;
+    margin-bottom: 200px;
 }
 
 .projects h2{
-    font-size: 40px;
+    font-size: 30px;
     font-family: 'Press Start 2P', cursive;
     margin-bottom:40px;
     color: white;
 
+}
+
+.projects h3 {
+    font-family: 'Press Start 2P', cursive;
 }
 
 .icon img {
@@ -111,17 +125,25 @@ nav ul li {
     background-color: white;
     border-radius: 25px;
     border: 15px white solid;
+    line-height:150%;
     
 }
 
 
 
+.orgs h2{
+    font-size:35px;
+    margin-left:20px;
+}
 .orgs {
-    margin: 20px;
+    margin-bottom:200px;
+    
 
 }
 
 .orgs ul{
     list-style:none;
+    margin-left:-14px;
+    line-height:150%;
 
 }
